--- a/style.css
+++ b/style.css
@@ -159,4 +159,5 @@ body{
 html{
 	background-image: url(images/pattern-background-desktop.svg);
 	background-repeat: no-repeat;
+	background-size: 100%;
 }
